--- a/getstarted.html
+++ b/getstarted.html
@@ -68,7 +68,7 @@ footer{
 <li><a href="home.html">Home</a></li>
 <li><a href="about.html">About Us </a></li>
 <li><a href="login.html">Log in</a></li>
-<li><a href="Getstarted.html">Get Started</a></li>
+<li><a href="getstarted.html">Get Started</a></li>
 <li><a href="#">Contact us</a></li>
 </ul>
 </nav>
