--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ header{
 <li><a href="home.html">Home</a></li>
 <li><a href="about.html">About Us </a></li>
 <li><a href="login.html">Log in</a></li>
-<li><a href="Getstarted.html">Get Started</a></li>
+<li><a href="getstarted.html">Get Started</a></li>
 <li><a href="#">Contact us</a></li>
 </ul>
 </nav>
@@ -109,4 +109,5 @@ header{
 <footer>
 	<p>&copy;2025 Timmy Cooperative Society. All rights reserved.</p>
 </footer>
+
 </html>
