--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@ footer{
 <li><a href="home.html">Home</a></li>
 <li><a href="about.html">About Us </a></li>
 <li><a href="login.html">Log in</a></li>
-<li><a href="Getstarted.html">Get Started</a></li>
+<li><a href="getstarted.html">Get Started</a></li>
 <li><a href="#">Contact us</a></li>
 </ul>
 </nav>
@@ -102,4 +102,5 @@ footer{
 <p>&copy;2025 Timmy Cooperative Society. All rights reserved.</p>
 </footer>
 </body>
+
 </html>
