--- a/home.html
+++ b/home.html
@@ -94,7 +94,7 @@ footer{
 <p>Fill out our memebership form and start contributing monthly to enjoy full memever benefits.</p>
 </section>
 <ol>
- <button onclick="document.location ='GetStarted.html'"> Get Started</button>  
+ <button onclick="document.location ='getStarted.html'"> Get Started</button>  
 <button onclick="location.href='mailto:babtundemathew735@gmail.com'">Send mail</button>
 <button onclick="document.body.scrollTop = 0; document.documentElement.scrollTop = 0;">Back to top</button>
 </ol>
@@ -104,3 +104,4 @@ footer{
 </body>
 
 </html>
+
